# rust-cortex-a

./: .gitignore  README.md
app_cortex_a9/: Cargo.toml  Dockerfile  Makefile  README.md  link.ld
app_cortex_a9/.cargo/: config
app_cortex_a9/src/: main.rs  start.S
